[gd_scene load_steps=3 format=3 uid="uid://cgmfll0vsjr3k"]

[ext_resource type="Script" path="res://entities/abilities/panzer/actions/panzer_shield_action.gd" id="1_a4wd7"]
[ext_resource type="Script" path="res://entities/collision_box.gd" id="2_5ravb"]

[node name="Shield" type="Node2D"]
script = ExtResource("1_a4wd7")

[node name="DurationTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 4.0
one_shot = true

[node name="WaitTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 6.0
one_shot = true

[node name="ShieldBox" type="Area2D" parent="."]
show_behind_parent = true
collision_layer = 4
collision_mask = 16
monitoring = false
script = ExtResource("2_5ravb")

[node name="CollisionShape" type="CollisionPolygon2D" parent="ShieldBox"]
build_mode = 1
polygon = PackedVector2Array(32, 0, 32, -4, 28, -16, 20, -24, 16, -28, 4, -32, -4, -32, -16, -28, -20, -24, -28, -16, -32, -4, -32, 0, -24, 0, -24, -4, -20, -12, -12, -20, -4, -24, 4, -24, 12, -20, 20, -12, 24, -4, 24, 0)

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
[connection signal="area_entered" from="ShieldBox" to="." method="_on_shield_box_area_entered"]
